# k8s-oaas-observability

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  ct.yaml  index.yaml  oaas.md  polaris.yaml  renovate.json
.github/: bump-versions
.github/scripts/: helm-repos.sh
.github/workflows/: cd.yaml  ci.yaml  release.yaml  updates.yaml
charts/aoi/: .gitignore  .helmignore  CHANGELOG.MD  Chart.yaml  README.md  values.yaml
charts/aoi/ci/: default-values.yaml
charts/aoi/templates/: _helpers.tpl  externalsecrets.yaml  grafana-datasource.yaml  ingress.yaml  pvc-victoria-metrics.yaml  validate.yaml
charts/cert-manager-crds/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/kube-state-metrics/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/kube-state-metrics/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  kubeconfig-secret.yaml  networkpolicy.yaml  pdb.yaml  podsecuritypolicy.yaml  psp-clusterrole.yaml  psp-clusterrolebinding.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  stsdiscovery-role.yaml  stsdiscovery-rolebinding.yaml
charts/netic-oaas/: .helmignore  Chart.yaml  README.md  values.yaml
charts/netic-oaas/charts/: kube-state-metrics  prometheus-operator
charts/netic-oaas/ci/: README.md  jsonnetfile.json  jsonnetfile.lock.json  update-rules.sh
charts/netic-oaas/hack/: kind-calico-cluster.yaml  rke-values.yaml
charts/netic-oaas/local/: demo.md
charts/oaas-observability/: .gitignore  .helmignore  Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/oaas-observability/charts/: opentelemetry-operator  otel-operator  prometheus-node-exporter
charts/oaas-observability/ci/: default-values.yaml  minimal-deploy-values.yaml
charts/oaas-observability/local/: alertmanager-test.yaml  docker-compose.yml  kind-calico.sh
charts/oaas-observability/scripts/: README.md  alerts-etcd.jsonnet  alerts-k8s.jsonnet  grafana-etcd.jsonnet  grafana-k8s-windows.jsonnet  grafana-k8s.jsonnet  jsonnetfile.json  jsonnetfile.lock.json  recording-rules.jsonnet  update-rules.sh  windows-recording-rules.jsonnet
charts/oaas-observability/templates/: _helpers.tpl  priorityclass.yaml  validate.yaml
charts/opa-exporter/: Chart.yaml  README.md  values.yaml
charts/opa-exporter/templates/: deployment.yaml  servicemonitor.yaml
charts/opentelemetry-collector/: .helmignore  Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/opentelemetry-collector/ci/: default-values.yaml  values-test.yaml
charts/opentelemetry-collector/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/opentelemetry-operator/: Chart.yaml  README.md  values.yaml
charts/opentelemetry-operator/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  clusterrole.yaml  clusterrolebinding.yaml  crds.yaml  deployment.yaml  issuer.yaml  mutatingwebhookconfiguration.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml  validatingwebhookconfiguration.yaml
charts/otel-operator/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/otel-operator/charts/: cert-manager-crds
charts/otel-operator/ci/: default-values.yaml
charts/otel-operator/crds/: crd-opentelemetrycollector.yaml  crd-opentelemetryinstrumentation.yaml
charts/otel-operator/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  clusterrole.yaml  clusterrolebinding.yaml  crds.yaml  deployment.yaml  issuer.yaml  mutatingwebhookconfiguration.yaml  networkpolicy.yaml  psp-clusterrole.yaml  psp-clusterrolebinding.yaml  psp.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml  validatingwebhookconfiguration.yaml
charts/prometheus/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/prometheus-node-exporter/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/prometheus-operator/: Chart.yaml  README.md  values.yaml
charts/promtail-forwarding/: .helmignore  Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/vector-agent/: .DO_NOT_EDIT  Chart.yaml
controllers/endpoint-controller/: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
controllers/endpoint-controller/cmd/controller/: BUILD  main.go
controllers/endpoint-controller/pkg/controller/: BUILD  controller.go  controller_test.go
controllers/endpoint-controller/pkg/signals/: BUILD  signal.go  signal_posix.go  signal_windows.go
local/: docker-compose.yml  kind-cluster.yaml
local/vector/: vector.toml
(+183 files in other folders)
